# PodcastTranscription

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/audio_processing/: __init__.py  audio_splitter.py  ffmpeg_splitter.py  ffmpeg_utilities.py
src/diarizer/: __init__.py  nemo_diarizer.py
src/metadata/: __init__.py  metadata.py  tinytag_metadata.py
src/punctuation_realignment/: __init__.py  punctuation_realignment.py
src/rttm_combiner/: __init__.py  segment_combiner.py
src/transcriber/: __init__.py  transcriber.py
src/utils/: __init__.py  get_words_speaker_mapping.py  load_word_timestamps.py  logger.py  logging_object.py  rttm_loader.py
src/web_vtt/: web_vtt_converter.py
