[tool.poetry]
name = "podcasttranscription"
version = "0.1.0"
description = ""
authors = ["Graham Doerksen <46031209+gdoerksen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
