[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Graham Doerksen", email = "46031209+gdoerksen@users.noreply.github.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "torchaudio>=0.13.1",
    "openai-whisper>=20230124",
    "whisperx @ git+https://github.com/m-bain/whisperx.git",
]
